# OOP-Project-Vehicle_Rental_System

./: CMakeLists.txt  README.md  resources.qrc
Forms/: customerDashboard.ui
data/: royal_car_rental.db  seed.sql
include/: Admin.h  AdminDashboard.h  Booking.h  BookingPage.h  Car.h  Customer.h  CustomerDashboard.h  CustomerFormPage.h  DatabaseManager.h  InvoicePage.h  LoginWindow.h  RentalSystem.h  ReportsPage.h  ReturnPage.h  User.h  Vehicle.h  VehicleManagementPage.h  mainwindow.h
src/: Admin.cpp  AdminDashboard.cpp  Booking.cpp  BookingPage.cpp  Car.cpp  Customer.cpp  CustomerDashboard.cpp  CustomerFormPage.cpp  DatabaseManager.cpp  InvoicePage.cpp  LoginWindow.cpp  RentalSystem.cpp  ReportsPage.cpp  ReturnPage.cpp  User.cpp  Vehicle.cpp  VehicleManagementPage.cpp  main.cpp  mainwindow.cpp
